[gd_scene load_steps=3 format=3 uid="uid://u6xk2a3ceoka"]

[ext_resource type="PackedScene" uid="uid://bvvh1e6etni7s" path="res://Scenes/SwitchSM.tscn" id="1_3gjot"]
[ext_resource type="Script" path="res://Scripts/Option.gd" id="1_tylor"]

[node name="Option" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SwitchSM" parent="." instance=ExtResource("1_3gjot")]

[node name="Settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tylor")

[node name="VSync" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.385
anchor_top = 0.134
anchor_right = 0.608
anchor_bottom = 0.188
offset_left = 0.88797
offset_top = 0.103989
offset_right = 0.536011
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 52

[node name="VSync" type="Label" parent="Settings/VSync"]
layout_mode = 2
text = "V-Sync
"

[node name="VSyncButton" type="OptionButton" parent="Settings/VSync"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Disable"
popup/item_0/id = 0
popup/item_1/text = "Enable"
popup/item_1/id = 1

[node name="Window" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.385
anchor_top = 0.198
anchor_right = 0.609
anchor_bottom = 0.253
offset_left = 0.88797
offset_top = 0.239983
offset_right = -0.487976
offset_bottom = -0.440018
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Window" type="Label" parent="Settings/Window"]
layout_mode = 2
text = "Window"

[node name="WindowButton" type="OptionButton" parent="Settings/Window"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullsreen"
popup/item_1/id = 1

[node name="Resolution" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.386
anchor_top = 0.263
anchor_right = 0.609
anchor_bottom = 0.316
offset_left = -0.136017
offset_top = -0.200012
offset_right = -0.487976
offset_bottom = 0.271988
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Resolution" type="Label" parent="Settings/Resolution"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionButton" type="OptionButton" parent="Settings/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 9
selected = 0
popup/item_0/text = "1024x576"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1600x900"
popup/item_3/id = 3
popup/item_4/text = "1920x1080"
popup/item_4/id = 4
popup/item_5/text = "2048x1152"
popup/item_5/id = 5
popup/item_6/text = "2560x1440"
popup/item_6/id = 6
popup/item_7/text = "3200x1800"
popup/item_7/id = 7
popup/item_8/text = "3840x2160"
popup/item_8/id = 8

[node name="Shadows" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 0.748
anchor_bottom = 0.385
offset_left = 394.628
offset_top = -17.344
offset_right = -143.324
offset_bottom = -2.472
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 34

[node name="Shadows" type="Label" parent="Settings/Shadows"]
layout_mode = 2
text = "Shadows
"

[node name="ShadowsButton" type="OptionButton" parent="Settings/Shadows"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 6
selected = 0
popup/item_0/text = "VeryLow"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "VeryHigh"
popup/item_4/id = 4
popup/item_5/text = "Ultra"
popup/item_5/id = 5

[node name="Textures" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 0.748
anchor_bottom = 0.385
offset_left = 395.128
offset_top = 19.656
offset_right = -142.824
offset_bottom = 34.528
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="Textures" type="Label" parent="Settings/Textures"]
layout_mode = 2
text = "Textures"

[node name="TexturesButton" type="OptionButton" parent="Settings/Textures"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
popup/item_3/text = "Ultra"
popup/item_3/id = 3

[node name="Antialiasing" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 0.748
anchor_bottom = 0.385
offset_left = 394.628
offset_top = 57.656
offset_right = -143.324
offset_bottom = 72.528
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Antialiasing" type="Label" parent="Settings/Antialiasing"]
layout_mode = 2
text = "Antialiasing"

[node name="AntialiasingButton" type="OptionButton" parent="Settings/Antialiasing"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "MSAA OFF"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "MSAA2X"
popup/item_2/id = 2
popup/item_3/text = "MSAA4X"
popup/item_3/id = 3
popup/item_4/text = "TAA"
popup/item_4/id = 4

[node name="SSAO" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 0.748
anchor_bottom = 0.385
offset_left = 395.628
offset_top = 95.656
offset_right = -142.324
offset_bottom = 110.528
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 61

[node name="SSAO" type="Label" parent="Settings/SSAO"]
layout_mode = 2
text = "SSAO"

[node name="SSAOButton" type="OptionButton" parent="Settings/SSAO"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "Disable"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3

[node name="Bloom" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 0.748
anchor_bottom = 0.385
offset_left = 396.128
offset_top = 132.656
offset_right = -141.824
offset_bottom = 147.528
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 52

[node name="Bloom" type="Label" parent="Settings/Bloom"]
layout_mode = 2
text = "Bloom
"

[node name="BloomButton" type="OptionButton" parent="Settings/Bloom"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "Disable"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "VeryHigh"
popup/item_4/id = 4

[node name="Reflection" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 0.748
anchor_bottom = 0.385
offset_left = 396.128
offset_top = 169.656
offset_right = -141.824
offset_bottom = 184.528
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Reflection" type="Label" parent="Settings/Reflection"]
layout_mode = 2
text = "Reflection"

[node name="ReflectionButton" type="OptionButton" parent="Settings/Reflection"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "Disable"
popup/item_0/id = 0
popup/item_1/text = "VeryLow"
popup/item_1/id = 1
popup/item_2/text = "Low"
popup/item_2/id = 2
popup/item_3/text = "Medium"
popup/item_3/id = 3
popup/item_4/text = "High"
popup/item_4/id = 4

[node name="Fog" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.357
anchor_right = 0.748
anchor_bottom = 0.385
offset_left = 396.128
offset_top = 206.656
offset_right = -141.824
offset_bottom = 221.528
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 74

[node name="Fog" type="Label" parent="Settings/Fog"]
layout_mode = 2
text = "Fog
"

[node name="FogButton" type="OptionButton" parent="Settings/Fog"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "Disable"
popup/item_0/id = 0
popup/item_1/text = "VeryLow"
popup/item_1/id = 1
popup/item_2/text = "Low"
popup/item_2/id = 2
popup/item_3/text = "Medium"
popup/item_3/id = 3
popup/item_4/text = "High"
popup/item_4/id = 4

[node name="Return" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 392.0
offset_top = 461.0
offset_right = 453.0
offset_bottom = 492.0
text = "Return"

[node name="Save" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 520.0
offset_top = 461.0
offset_right = 589.0
offset_bottom = 492.0
text = "   Save   "

[connection signal="item_selected" from="Settings/VSync/VSyncButton" to="Settings" method="_on_v_sync_button_item_selected"]
[connection signal="item_selected" from="Settings/Window/WindowButton" to="Settings" method="_on_window_button_item_selected"]
[connection signal="item_selected" from="Settings/Resolution/ResolutionButton" to="Settings" method="_on_option_button_item_selected"]
[connection signal="item_selected" from="Settings/Shadows/ShadowsButton" to="Settings" method="_on_shadows_button_item_selected"]
[connection signal="item_selected" from="Settings/Textures/TexturesButton" to="Settings" method="_on_textures_button_item_selected"]
[connection signal="item_selected" from="Settings/Antialiasing/AntialiasingButton" to="Settings" method="_on_antialiasing_button_item_selected"]
[connection signal="item_selected" from="Settings/SSAO/SSAOButton" to="Settings" method="_on_ssao_button_item_selected"]
[connection signal="item_selected" from="Settings/Bloom/BloomButton" to="Settings" method="_on_bloom_button_item_selected"]
[connection signal="item_selected" from="Settings/Reflection/ReflectionButton" to="Settings" method="_on_reflection_button_item_selected"]
[connection signal="item_selected" from="Settings/Fog/FogButton" to="Settings" method="_on_fog_button_item_selected"]
[connection signal="pressed" from="Settings/Return" to="Settings" method="_on_return_pressed"]
[connection signal="pressed" from="Settings/Save" to="Settings" method="_on_save_pressed"]
